--- a/views/index.erb
+++ b/views/index.erb
@@ -9,25 +9,58 @@
       <button type="submit">Load Profile</button>
     </form>
 
+   
      <div class="profile-container">
+     </div>
+
+     <template id='profile-template'>
       <div class="profile">
         <div class="left">
-          <img src="https://avatars.githubusercontent.com/u/5008648?">
+          <img src= '{{ avatar_url }}'>
         </div>
 
         <div class="right">
           <h3>
-            <a href="https://github.com/tansaku">
-            tansaku
+            <a href='https://github.com/{{ login }}' >
+            {{ login }}
             </a>
           </h3>
-          <h4>Repos: 120</h4>
-          <h4>Followers: 123</h4>
+          <h4>Repos: {{ public_repos }}</h4>
+          <h4>Followers: {{ followers }}</h4>
         </div>
+        <a class='close' href='#'>✗</a>
         <br clear="all">
       </div>
-    </div>
+    </template>
 
     <script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
+    <script src ='https://cdnjs.cloudflare.com/ajax/libs/mustache.js/0.8.1/mustache.min.js'></script>
+    <script>
+    function addProfileFromUsername(username){
+      $.get('https://api.github.com/users/'+ username + "?access_token=ff8a6e78e60868859c7a61a800aaf3cb46885725", function(user){
+        var newProfile = Mustache.render($('#profile-template').html(), user);
+        $('.profile-container').append(newProfile);
+        $('.close').on('click', function(){
+          alert('Close button clicked');
+        });
+      }).fail(function(){
+        alert('No such user with the username: ' + username);
+      }).always(function(){
+        $('#username').val('');
+      });
+    };
+
+
+
+
+
+      
+    $(document).ready(function(){
+      $('#add_profile').on('submit', function(event){
+        event.preventDefault();
+        addProfileFromUsername($('#username').val());
+      });
+    });
+    </script>
   </body>
 </html>
